--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "chalk": "^2.4.1",
     "validator": "^10.8.0",
     "yargs": "^12.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.5"
   }
 }
